--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</style>
 </head>
 <body>
-	<img src="foto.jpg" alt="foto">
+	<img src="http://www.welltakecare.com/foto.jpg" alt="foto">
 	<h1>Pablo</h1>
 	<p>Hi! my name is Pablo and this is an exercise</p>
 	<input type="email" placeholder="your email">
