--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 	<img src="http://www.welltakecare.com/foto.jpg" alt="foto">
 	<h1>Pablo</h1>
 	<p>Hi! my name is Pablo and this is an exercise</p>
-	<input type="email" placeholder="your email">
-	<input type="submit">
+	
+	
+	<form action="https://formspree.io/pablito_chiarella@hotmail.com" method="POST">
+	  <input type="email" placeholder="your email" name="_replyto">
+	  <input type="submit" value="Send">
+	</form>
+	
 </body>
 </html>
